# claude-ios

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.e2e.yml  docker-compose.observability.yml  docker-compose.prod.observability.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
certs/appstore/: .gitkeep
docs/: 00-vision.md  01-architecture.md  02-tech-stack.md  03-data-model.md  05-security.md  06-testing-strategy.md  07-deployment.md  08-api-documentation.md  09-e2e-testing.md  100-known-tech-debt.md  99-open-questions.md  API-REFERENCE.md  README.md  figma-gap-analysis.md
docs/adr/: ADR-001-stack-choice.md  ADR-002-access-policy-state-machine.md  ADR-003-byok-envelope-encryption.md  ADR-004-blocked-http-200.md  ADR-005-idempotency-ledger.md  ADR-006-credit-billing-and-subscription-grant.md  ADR-007-lazy-user-provisioning.md  ADR-008-provider-tool-use-id.md  ADR-009-admin-token-auth.md  ADR-010-backend-hosted-preview.md  ADR-011-server-side-tools.md  ADR-012-assistant-mode-vs-billing-mode.md  ADR-013-workspace-projects-vs-website-builder.md  ADR-014-multimodal-attachments.md  ADR-015-consumable-token-iap.md  ADR-016-extended-byok-statuses.md  ADR-017-shared-server-traefik-deploy.md  ADR-020-inline-base64-attachments-mvp.md  ADR-021-deterministic-step-order-and-block-normalization.md  ADR-022-optional-project-and-tool-gating.md  ADR-024-history-payload-domain-normalization.md  ADR-025-parallel-tool-calls-and-max-tokens-truncation.md  ADR-029-adapty-subscription-webhook.md  ADR-032-notifications-enabled-default-false.md  ADR-033-llm-provider-abstraction.md  ADR-034-user-model-selection.md  ADR-035-prompt-presets-endpoint.md  ADR-036-workspaces-implementation.md  ADR-038-move-chat-to-workspace.md  ADR-041-openai-native-pdf-attachment.md  ADR-044-multi-provider-byok.md  ADR-045-per-path-body-limit-workspace-files.md  ADR-046-adapty-webhook-outcome-logging.md  ADR-047-adapty-real-payload-format-and-grant-idempotency.md  ADR-048-admin-subscription-grant.md  ADR-049-presets-localization.md  ADR-050-cloudpayments-webhook.md  ADR-051-cloudpayments-checkout-payment-link.md  ADR-052-cloudpayments-webhook-lenient-auth-header.md  ADR-053-cloudpayments-webhook-user-resolution-via-auth-devices.md  (+6 more)
infra/deploy/: README.md  deploy.sh
infra/legacy/: Caddyfile  deploy-vps.sh  nginx.conf.example
infra/observability/: prometheus.prod.yml  prometheus.yml
migrations/: env.py
migrations/versions/: 20260521_0001_initial_schema.py  20260525_0002_tool_calls_provider_tool_use_id.py  20260601_0003_website_builder.py  20260602_0004_figma_gap_sprint1.py  20260604_0006_chat_steps_seq.py  20260604_0007_chat_sessions_project_id_nullable.py  20260612_0008_adapty_webhook_events.py  20260616_0009_notifications_default_false.py  20260617_0010_chat_sessions_model.py  20260617_0011_workspaces.py  20260619_0013_byok_provider.py  20260702_0014_cloudpayments_webhook_events.py  20260709_0015_auth_devices_lower_device_id_idx.py  20260719_0016_chat_provider_state.py
src/app/: __init__.py  config.py  db.py  deps.py  errors.py  main.py
tests/: conftest.py
tests/e2e/: test_assistant_mode.py  test_chat_attachments_external.py  test_chat_flows.py  test_token_purchase_flow.py  test_website_tool_loop.py
tests/e2e_live/: conftest_live.py  run_admin_website_e2e.py  run_e2e.py
tests/integration/: test_admin.py  test_admin_subscription_grant.py  test_adr022_project_gating.py  test_api_documentation.py  test_auth_migration_0005.py  test_billing_adapty_adr047.py  test_billing_adapty_device_resolution_adr055.py  test_billing_adapty_outcome_logging_adr046.py  test_billing_adapty_uppercase_device_adr055.py  test_billing_adapty_webhook.py  test_billing_cloudpayments_auth_formats_adr052.py  test_billing_cloudpayments_checkout.py  test_billing_cloudpayments_device_resolution_adr053.py  test_billing_cloudpayments_payment_type_fallback_adr057.py  test_billing_cloudpayments_service_reasons.py  test_billing_cloudpayments_uppercase_device_adr055.py  test_billing_cloudpayments_verification_adr054.py  test_billing_cloudpayments_webhook.py  test_byok.py  test_byok_multiprovider_adr044.py  test_byok_multiprovider_generation_adr044.py  test_byok_status_policy.py  test_chat_attachments.py  test_chat_history_normalization_adr024.py  test_chat_move_to_workspace_adr038.py  test_chat_parallel_tools_max_tokens_adr025.py  test_chat_step_order.py  (+25 more)
(+318 files in other folders)
